--- a/wifiwar/.gitignore
+++ b/wifiwar/.gitignore
@@ -58,6 +58,13 @@ sysinfo.txt
 *.apk
 *.unitypackage
 
+###
+# OS generated
+###
+.DS_Store
+.Spotlight-V100
+.Trashes
+
 # Crashlytics generated file
 crashlytics-build.properties
 
